# Estimation-of-latent-risk-in-the-U.S.-market-using-representative-variables

./: .gitignore  README.md  environment.yml  pyproject.toml
cartel/: main.aux  main.tex  poster.bib  poster.tex
data/: multiTimeline-5.csv  us_monthly_inflation_rates_1913_2026.csv  yahoo__CL_F.csv  yahoo__DX-Y.NYB.csv  yahoo__GLD.csv  yahoo___MOVE.csv  yahoo___VIX.csv
dfm/: analyze_factor_change_vs_inflation.py  analyze_factor_inflation.py  analyze_factor_trend_backtest_2008.py  analyze_factor_vs_pure_inflation.py  pipeline.py  plot_results.py  plot_style.py
imgs/: mapa_maiz.html
notebooks/: 01 DFM VIX-MOVE.ipynb  02 trend.ipynb
notebooks/agua/: .cache.sqlite  map.ipynb  precipitation.ipynb
output/: dfm_diagnostics_grid.csv  dfm_run_metadata.json  dfm_summary.txt  factor_latente_final.csv  panel_original_niveles.csv  panel_transformado_usado.csv
output/inflation_analysis/: factor_inflation_cross_correlation.csv  factor_inflation_merged_periodic.csv  factor_inflation_stats.json  factor_inflation_summary.txt
output/inflation_change_analysis/: cross_correlation.csv  monthly.csv  stats.json  summary.txt
output/pure_inflation_analysis/: factor_vs_pure_inflation_cross_correlation.csv  factor_vs_pure_inflation_merged_monthly.csv  factor_vs_pure_inflation_stats.json  factor_vs_pure_inflation_summary.txt
output/trend_backtest_2008/: latent_factor_backtest_2008.csv  (+5 more)
referencias/: referencias.md  www.datacentermap.com.url
trend/: __init__.py  arima.py  cli.py  data.py  estimator.py  forecast.py  plotting.py  selection.py  solver.py  split.py
(+1 files in other folders)
