[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guerrero-trend"
version = "0.1.1"
description = "Spectral Guerrero (2007) penalized trend with local-minima scan over smoothness index."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Heri"}]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
yahoo = ["yfinance>=0.2.20"]

arima = [\"statsmodels>=0.14.0\"]
[project.scripts]
guerrero-trend = "guerrero_trend.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
